<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/profile"
            android:title="Profile" />
        <item
            android:id="@+id/nav_rate_review"
            android:icon="@mipmap/ic_rate_review"
            android:title="@string/nav_rate_review" />
        <item
            android:id="@+id/nav_location"
            android:icon="@mipmap/ic_location"
            android:title="@string/nav_location" />
        <item
            android:id="@+id/nav_fet_details"
            android:icon="@mipmap/ic_fet"
            android:title="@string/nav_fet" />
        <item
            android:id="@+id/nav_your_order"
            android:icon="@mipmap/ic_order"
            android:title="@string/nav_your_order" />
        <item
            android:id="@+id/nav_saved_items"
            android:icon="@mipmap/ic_saved_item"
            android:title="@string/nav_saved_items" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@mipmap/ic_sign_out"
            android:title="@string/nav_sign_out" />

    </group>


</menu>
