<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_ur_taste"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/category_listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/get_delivered_button_bg"
            android:text="@string/get_delivered"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/get_ur_food_str"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_12sp"
            android:textStyle="bold"
            android:padding="@dimen/dimen_10dp"/>

    </LinearLayout>

</LinearLayout>